Fixed footer spacing, switched to proper static URLs

--- a/dnstwister/static/sources/report.css
+++ b/dnstwister/static/sources/report.css
@@ -22,5 +22,6 @@ header {
 }
 
 footer {
-    text-align: center;;
+    text-align: center;
+    margin-top: 6rem;
 }
